objects/Veda_Comprehensive__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>genesis__Applications__c</referenceTo>
        <relationshipLabel>Veda Comprehensive</relationshipLabel>
        <relationshipName>Veda_Comprehensive</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message_Id__c</fullName>
        <label>Message Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Veda_Score__c</fullName>
        <label>Veda Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bureau_Reference__c</fullName>
        <label>bureau Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>client_Reference__c</fullName>
        <label>client Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_Of_Birth_First_Reported_Date__c</fullName>
        <label>date Of Birth First Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_Of_Birth_Last_Reported_Date__c</fullName>
        <label>date Of Birth Last Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_Of_Birth__c</fullName>
        <label>date Of Birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_time_Generated__c</fullName>
        <label>date time Generated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_time_Requested__c</fullName>
        <label>date time Requested</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>drivers_Licence_First_Reported_Date__c</fullName>
        <label>drivers Licence First Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>drivers_Licence_Last_Reported_Date__c</fullName>
        <label>drivers Licence Last Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>drivers_Licence_Number__c</fullName>
        <label>drivers Licence Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enquiry_Id__c</fullName>
        <label>enquiry Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>family_Name__c</fullName>
        <label>family Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>first_Given_Name__c</fullName>
        <label>first Given Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gender_Code__c</fullName>
        <label>gender Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gender__c</fullName>
        <label>gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>individualName_Last_Credit_Enquiry_Date__c</fullName>
        <label>individualName Last Credit Enquiry Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>individual_Name_First_Reported_Date__c</fullName>
        <label>individual Name First Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>individual_Name_Last_Reported_Date__c</fullName>
        <label>individual Name Last Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integration_Error_Status_Code__c</fullName>
        <label>integration Error Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integration_Error_Status__c</fullName>
        <label>integration Error Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isDeceased__c</fullName>
        <label>isDeceased</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Deceased_Reported_Date__c</fullName>
        <label>is Deceased Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lodgedComplaint__c</fullName>
        <label>lodgedComplaint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lodged_Complaint_Reported_Date__c</fullName>
        <label>lodged Complaint Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>operator_Id__c</fullName>
        <label>operator Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>operator_Name__c</fullName>
        <label>operator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>other_given_name__c</fullName>
        <label>other given name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>permission_Type_Code__c</fullName>
        <label>permission Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>permission_Type__c</fullName>
        <label>permission Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>primary_Match_Id_Index__c</fullName>
        <label>primary Match Id Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>primary_Match_Type__c</fullName>
        <label>primary Match Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_Data_Level_Code__c</fullName>
        <label>product Data Level Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_Data_Level__c</fullName>
        <label>product Data Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_Version__c</fullName>
        <label>product Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>response_Type__c</fullName>
        <label>response Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xml_Request__c</fullName>
        <label>xml Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xml_Response__c</fullName>
        <label>xml Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda Comprehensive</label>
    <nameField>
        <displayFormat>VC-{0000000000}</displayFormat>
        <label>Veda Comprehensive Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Veda Comprehensive</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>